--- a/preparcialI/src/main/resources/co/edu/uniquindio/marketplace/preparciali/ViewPrestamosUQ.fxml
+++ b/preparcialI/src/main/resources/co/edu/uniquindio/marketplace/preparciali/ViewPrestamosUQ.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="237.0" prefWidth="370.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button layoutX="98.0" layoutY="73.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="174.0" style="-fx-background-color: #f1c6a7;" text="Lista Objetos" textAlignment="CENTER" textOverrun="WORD_ELLIPSIS">
@@ -18,7 +17,7 @@
             <Font name="Agency FB" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="98.0" layoutY="164.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="174.0" style="-fx-background-color: #f1c6a7;" text="Lista Clientees">
+      <Button layoutX="98.0" layoutY="164.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="174.0" style="-fx-background-color: #f1c6a7;" text="Lista Clientes">
          <font>
             <Font name="Agency FB" size="18.0" />
          </font>
